hover effects, phone mask

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,15 @@
     <div class="header__social-wrap">
       <span class="social__text">Напишите нам</span>
       <ul class="header__social social list-reset">
-        <li class="social__item social__item--viber"><a href="#" class="social__link">Viber</a></li>
-        <li class="social__item social__item--whatsapp"><a href="#" class="social__link">Whatsapp</a></li>
-        <li class="social__item social__item--telegram"><a href="#" class="social__link">Telegram</a></li>
+        <li class="social__item">
+          <a href="#" class="social__link social__link--viber">Viber</a>
+        </li>
+        <li class="social__item">
+          <a href="#" class="social__link social__link--whatsapp">Whatsapp</a>
+        </li>
+        <li class="social__item">
+          <a href="#" class="social__link social__link--telegram">Telegram</a>
+        </li>
       </ul>
     </div>
 
@@ -32,13 +38,13 @@
       +7 (3952) <span>799-343</span>
     </a>
     <div class="header__btns">
-      <button class="btn-reset header__btn header__btn--left">
+      <button class="btn-reset header__btn header__btn--left" data-popup="popup-request">
         <svg width="22" height="26">
           <use xlink:href="images/sprites/sprite-multi.svg#deep"></use>
         </svg>
         <span>Узнать глубину на участке</span>
       </button>
-      <button class="btn-reset header__btn header__btn--right">
+      <button class="btn-reset header__btn header__btn--right" data-popup="popup-request">
         <svg width="26" height="26">
           <use xlink:href="images/sprites/sprite-multi.svg#cost"></use>
         </svg>
@@ -112,11 +118,11 @@
                 <svg width="12" height="20">
                   <use xlink:href="images/sprites/sprite-multi.svg#phone"></use>
                 </svg>
-                <input type="tel" placeholder="Введите номер телефона">
+                <input type="tel" placeholder="Введите номер телефона" class="form__field--phone">
                 <span>Введите номер телефона</span>
               </label>
 
-              <button class="btn-reset form__btn" type="submit">
+              <button class="btn-reset form__btn" type="submit" data-popup="popup-accept">
                 Узнать стоимость скважины
                 <svg width="22" height="11">
                   <use xlink:href="images/sprites/sprite-multi.svg#arrow"></use>
@@ -1314,11 +1320,11 @@
                   <svg width="12" height="20">
                     <use xlink:href="images/sprites/sprite-multi.svg#phone"></use>
                   </svg>
-                  <input type="tel" placeholder="Введите номер телефона">
+                  <input type="tel" placeholder="Введите номер телефона" class="form__field--phone">
                   <span>Введите номер телефона</span>
                 </label>
 
-                <button class="btn-reset form__btn" type="submit">
+                <button class="btn-reset form__btn" type="submit" data-popup="popup-accept">
                   Узнать глубину скважины
                   <svg width="22" height="11">
                     <use xlink:href="images/sprites/sprite-multi.svg#arrow"></use>
@@ -1635,7 +1641,7 @@
 
     <footer class="footer">
       <div class="footer__container container">
-        <a href="#" class="to-top">
+        <a href="#" class="to-top" data-scroll-to="header">
           <img src="images/to-top.png" alt="">
         </a>
         <div class="footer__body">
@@ -1668,9 +1674,15 @@
               Напишите нам
             </div>
             <ul class="footer__social social list-reset">
-              <li class="social__item social__item--viber"><a href="#" class="social__link">Viber</a></li>
-              <li class="social__item social__item--whatsapp"><a href="#" class="social__link">Whatsapp</a></li>
-              <li class="social__item social__item--telegram"><a href="#" class="social__link">Telegram</a></li>
+              <li class="social__item">
+                <a href="#" class="social__link social__link--viber">Viber</a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link social__link--whatsapp">Whatsapp</a>
+              </li>
+              <li class="social__item">
+                <a href="#" class="social__link social__link--telegram">Telegram</a>
+              </li>
             </ul>
           </div>
 
@@ -1761,9 +1773,15 @@
 
               <ul class="social list-reset popup-menu__social">
                 <span class="social__text">Напишите нам</span>
-                <li class="social__item social__item--viber"><a href="#" class="social__link">Viber</a></li>
-                <li class="social__item social__item--whatsapp"><a href="#" class="social__link">Whatsapp</a></li>
-                <li class="social__item social__item--telegram"><a href="#" class="social__link">Telegram</a></li>
+                <li class="social__item">
+                  <a href="#" class="social__link social__link--viber">Viber</a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link social__link--whatsapp">Whatsapp</a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link social__link--telegram">Telegram</a>
+                </li>
               </ul>
 
               <div class="popup-menu__btns mobile-btns">
@@ -1813,7 +1831,7 @@
                       <svg width="12" height="20">
                         <use xlink:href="images/sprites/sprite-multi.svg#phone"></use>
                       </svg>
-                      <input type="tel" placeholder="Введите номер телефона">
+                      <input type="tel" placeholder="Введите номер телефона" class="form__field--phone">
                       <span>Введите номер телефона</span>
                     </label>
 
